@@ -2,6 +2,7 @@
  - fix: handle connection errors on startup when no internet connection
    is available (#34)
  - fix: simplify error messages on connection errors in UI
+ - enh: do not re-download already-downloaded resources (#31)
 0.7.0
  - feat: implement download manager
  - feat: rename first tab to "Find Data" and allow searching for
